--- a/css/style.scss
+++ b/css/style.scss
@@ -3,12 +3,22 @@
 
 body {
     margin: 0;
-    background: black;
 }
 
-nav {
+.container {
+    background-image: url(../images/bg1.jpg);
+    background-size: cover;
+    height: 100vh;
+}
+
+.navbar {
     display: flex;
     justify-content: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    transition: background-color 0.5s;
+    z-index: 1000;
 }
 
 .nav-links {
@@ -34,9 +44,43 @@ nav {
     }
 
     span {
-        border-bottom: 2px solid white;
-        border-width: 2px;
-        padding: 1.5em;
+        border-bottom: 1px solid #fff;
+        padding-bottom: 1em;
     }
 }
 
+.sticky {
+    background-color: white;
+    a {
+        color: black;
+    }
+
+    #book {
+        border: black solid 1px;
+    }
+
+    span {
+        border-bottom: 1px solid black;
+    }
+}
+
+.section1 {
+    height: 100vh;
+
+    img {
+        position: relative;
+        width: 25%;
+        left: 50%;
+        padding: 5em;
+    }
+
+    h1, p {
+        font-family: "Cutive mono";
+    }
+
+    .section1-container {
+        display: flex;
+        justify-content: center;
+        width: 100vh;
+    }
+}
