--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
 }
 
-.container {
+.main-nav-container {
   background-image: url(../images/bg1.jpg);
   background-size: cover;
   height: 100vh;
@@ -16,8 +16,12 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  transition: background-color 0.5s;
   z-index: 1000;
+  max-height: 15%;
+}
+
+#gallery-nav, .navbar {
+  transition: max-height 0.8s, background-color 0.8s;
 }
 
 .nav-links {
@@ -44,33 +48,28 @@ body {
   padding-bottom: 1em;
 }
 
-.sticky {
-  background-color: white;
+.sticky, #gallery-nav {
+  background: white;
 }
-.sticky a {
+.sticky a, #gallery-nav a {
   color: black;
 }
-.sticky #book {
-  border: black solid 1px;
-}
-.sticky span {
+.sticky span, #gallery-nav span {
   border-bottom: 1px solid black;
 }
+.sticky #book, #gallery-nav #book {
+  border: black solid 1px;
+}
 
-.section1 {
-  height: 100vh;
+.sticky {
+  max-height: 10%;
 }
-.section1 img {
-  position: relative;
-  width: 25%;
-  left: 50%;
-  padding: 5em;
-}
-.section1 h1, .section1 p {
-  font-family: "Cutive mono";
-}
-.section1 .section1-container {
+
+#gallery {
   display: flex;
-  justify-content: center;
-  width: 100vh;
+  flex-wrap: wrap;
+}
+#gallery img {
+  max-width: 100%;
+  height: auto;
 }/*# sourceMappingURL=style.css.map */
