--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,8 @@ body {
   max-height: 15%;
 }
 
-.white-nav, .navbar {
+.white-nav,
+.navbar {
   transition: max-height 0.8s, background-color 0.8s;
 }
 
@@ -53,16 +54,20 @@ body {
   padding-bottom: 1em;
 }
 
-.sticky, .white-nav {
+.sticky,
+.white-nav {
   background: white;
 }
-.sticky a, .white-nav a {
+.sticky a,
+.white-nav a {
   color: var(--grey);
 }
-.sticky span, .white-nav span {
+.sticky span,
+.white-nav span {
   border-bottom: 1px solid var(--grey);
 }
-.sticky #book, .white-nav #book {
+.sticky #book,
+.white-nav #book {
   border: var(--grey) solid 1px;
 }
 
@@ -92,7 +97,8 @@ section img {
   max-width: 30em;
   height: auto;
 }
-section h2, section p {
+section h2,
+section p {
   font-family: "Sorts Mill Goudy", serif;
 }
 
@@ -105,7 +111,8 @@ footer .contact-links {
   justify-content: center;
   align-items: center;
 }
-footer h2, footer p {
+footer h2,
+footer p {
   font-family: "Sorts Mill Goudy", serif;
 }
 footer h2 {
@@ -136,4 +143,23 @@ footer #map {
 #contact-img img {
   max-width: 100%;
   height: auto;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 15em;
+}
+.form-container label,
+.form-container h1 {
+  font-family: "Sorts Mill Goudy", serif;
+}
+.form-container #submitButton {
+  padding: 0em 1.5em;
+  border: var(--grey) solid 1px;
+  background: transparent;
+  font-family: "Sorts Mill Goudy", serif;
+  font-size: 1.2em;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
