--- a/css/style.scss
+++ b/css/style.scss
@@ -26,7 +26,8 @@ body {
     max-height: 15%;
 }
 
-.white-nav, .navbar {
+.white-nav,
+.navbar {
     transition: max-height 0.8s, background-color 0.8s;
 }
 
@@ -46,7 +47,7 @@ body {
         padding: 5px;
     }
 
-    .logo a{
+    .logo a {
         font-family: "Oswald", sans-serif;
         font-weight: bold;
         font-size: 1.5em;
@@ -58,7 +59,8 @@ body {
     }
 }
 
-.sticky, .white-nav {
+.sticky,
+.white-nav {
     background: white;
 
     a {
@@ -91,9 +93,9 @@ body {
 section {
 
     .container {
-    display: flex;
-    justify-content: center;
-    margin-top: 5em;
+        display: flex;
+        justify-content: center;
+        margin-top: 5em;
     }
 
     .info {
@@ -106,7 +108,8 @@ section {
         height: auto;
     }
 
-    h2, p {
+    h2,
+    p {
         font-family: "Sorts Mill Goudy", serif;
     }
 }
@@ -115,46 +118,70 @@ footer {
     margin-top: 10em;
 
     .contact-links {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
-    
-        h2, p {
-            font-family: "Sorts Mill Goudy", serif;
-        }
 
-        h2 {
-            font-family: "Oswald", sans-serif;
-            font-weight: bold;
-            font-size: 3em;
-            color: var(--grey);
-        }
+    h2,
+    p {
+        font-family: "Sorts Mill Goudy", serif;
+    }
 
-        a {
-            text-decoration: none;
-            color: var(--grey);
-            font-size: 1.3em;
-            transition: font-size 0.5s;
-        }
+    h2 {
+        font-family: "Oswald", sans-serif;
+        font-weight: bold;
+        font-size: 3em;
+        color: var(--grey);
+    }
 
-        a:hover {
-            font-size: 1.4em;
-        }
+    a {
+        text-decoration: none;
+        color: var(--grey);
+        font-size: 1.3em;
+        transition: font-size 0.5s;
+    }
 
-        #map {
-            height: 20em;
-            width: 50em;
-            margin-bottom: 5em;
-            border: 0;
-        }
+    a:hover {
+        font-size: 1.4em;
+    }
+
+    #map {
+        height: 20em;
+        width: 50em;
+        margin-bottom: 5em;
+        border: 0;
+    }
 }
 
 #contact-img {
     margin: 0;
+
     img {
         max-width: 100%;
         height: auto;
     }
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 15em;
+
+    label,
+    h1 {
+        font-family: "Sorts Mill Goudy", serif;
+    }
+
+    #submitButton {
+        padding: 0em 1.5em;
+        border: var(--grey) solid 1px;
+        background: transparent;
+        font-family: "Sorts Mill Goudy", serif;
+        font-size: 1.2em;
+        cursor: pointer;
+    }
+
 }
