--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
 .main-nav-container {
   background-image: url(../images/bg1.jpg);
   background-size: cover;
+  background-position: center;
   height: 100vh;
 }
 
@@ -21,6 +22,8 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
+  margin: 0;
+  padding: 0;
   z-index: 1000;
   max-height: 15%;
 }
@@ -28,6 +31,10 @@ body {
 .white-nav,
 .navbar {
   transition: max-height 0.8s, background-color 0.8s;
+}
+
+.hamburger {
+  display: none;
 }
 
 .nav-links {
@@ -95,7 +102,7 @@ section .info {
   padding-right: 3em;
 }
 section img {
-  max-width: 30em;
+  max-width: 80%;
   height: auto;
 }
 section h2,
@@ -132,7 +139,7 @@ footer a:hover {
 }
 footer #map {
   height: 20em;
-  width: 50em;
+  width: 25%;
   margin-bottom: 5em;
   border: 0;
 }
@@ -216,4 +223,25 @@ main .menu-links .button-wrap a {
   text-decoration: none;
   color: white;
   font-weight: bold;
+}
+
+@media only screen and (max-width: 900px) {
+  .link {
+    display: none;
+  }
+  #hamburger {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: 1em;
+    top: 0.5em;
+    cursor: pointer;
+  }
+  #hamburger div {
+    width: 30px;
+    height: 3px;
+    background: white;
+    margin: 5px 0;
+    border-radius: 5em;
+  }
 }/*# sourceMappingURL=style.css.map */
