--- a/css/style.scss
+++ b/css/style.scss
@@ -23,8 +23,6 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    margin: 0;
-    padding: 0;
     z-index: 1000;
     max-height: 15%;
 }
@@ -34,7 +32,7 @@ body {
     transition: max-height 0.8s, background-color 0.8s;
 }
 
-.hamburger {
+#hamburger {
     display: none;
 }
 
@@ -82,6 +80,12 @@ body {
     #book {
         border: var(--grey) solid 1px;
     }
+
+    #hamburger {
+        div {
+            background: black;
+        }
+    }
 }
 
 .sticky {
@@ -107,12 +111,12 @@ section {
     }
 
     .info {
-        width: 30em;
+        max-width: 25em;
         padding-right: 3em;
     }
 
     img {
-        max-width: 80%;
+        max-width: 30vw;
         height: auto;
     }
 
@@ -156,7 +160,7 @@ footer {
 
     #map {
         height: 20em;
-        width: 25%;
+        width: 50vw;
         margin-bottom: 5em;
         border: 0;
     }
@@ -170,6 +174,7 @@ footer {
         height: auto;
     }
 }
+
 .form-container {
     width: 50%;
     margin: 10em auto;
@@ -193,7 +198,7 @@ footer {
                 margin-bottom: 5px;
             }
 
-            input{
+            input {
                 width: 100%;
                 padding: 8px;
                 box-sizing: border-box;
@@ -261,16 +266,9 @@ main {
 
 @media only screen and (max-width: 900px) {
 
-    .link {
-        display: none;
-    }
-
     #hamburger {
         display: flex;
         flex-direction: column;
-        position: absolute;
-        right: 1em;
-        top: .5em;
         cursor: pointer;
 
         div {
@@ -281,5 +279,45 @@ main {
             border-radius: 5em;
         }
     }
+
+
+    section {
+        .container {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .info {
+            padding: 0;
+            max-width: 80vw;
+        }
+    }
 }
 
+.hidden {
+    display: none;
+}
+
+.hamburger-nav {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    background: white;
+    position: fixed;
+    top: 0;
+
+    ul {
+        flex-direction: column;
+        margin-top: 7em;
+
+        li {
+            margin: 2em;
+
+        }
+
+        a {
+            color: black;
+        }
+    }
+}
