--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sorts+Mill+Goudy:ital@0;1&display=swap");
-:root {
-  --grey: rgb(51, 51, 51);
-}
-
 body {
   margin: 0;
 }
@@ -66,15 +62,15 @@ body {
 }
 .sticky a,
 .white-nav a {
-  color: var(--grey);
+  color: black;
 }
 .sticky span,
 .white-nav span {
-  border-bottom: 1px solid var(--grey);
+  border-bottom: 1px solid black;
 }
 .sticky #book,
 .white-nav #book {
-  border: var(--grey) solid 1px;
+  border: black solid 1px;
 }
 .sticky #hamburger div,
 .white-nav #hamburger div {
@@ -128,11 +124,11 @@ footer h2 {
   font-family: "Oswald", sans-serif;
   font-weight: bold;
   font-size: 3em;
-  color: var(--grey);
+  color: black;
 }
 footer a {
   text-decoration: none;
-  color: var(--grey);
+  color: black;
   font-size: 1.3em;
   transition: font-size 0.5s;
 }
@@ -250,7 +246,14 @@ main .menu-links .button-wrap a {
   }
 }
 .hidden {
-  display: none;
+  display: none !important;
+}
+
+.menu-active .logo a {
+  color: black;
+}
+.menu-active #hamburger div {
+  background: black;
 }
 
 .hamburger-nav {
